# chamd

./: .env.example  .env.tpl  .gitignore  LICENSE  README.md  mysupercooldrv.cat  package-lock.json  package.json
.cache/clangd/index/: DBKDrvr.c.AFC8AEF8717E0425.idx  DBKDrvr.h.2F4298C7165F99B7.idx  DBKFunc.h.AAE7097A9823D967.idx  IOPLDispatcher.h.666983467E5CD68A.idx  apic.h.D3A0CEFA5666DA82.idx  debugger.h.2D23A06962925E9E.idx  deepkernel.h.07B4B3A7F711D620.idx  extradefines.h.204D57D976608722.idx  extraimports.h.F26F2BC5A024BE40.idx  interruptHook.h.2E4916DD5DE74E58.idx  memscan.h.1C3D7649256084AB.idx  noexceptions.h.9A9A1CC44E7A8690.idx  processlist.h.1D3366EF42DAF3A9.idx  threads.h.21F3330946E6BC89.idx  ultimap.h.87850A7EF846E957.idx  ultimap2.h.730401E874C05B86.idx  vmxhelper.h.ABF5F49EF1CEB89C.idx
scripts/: build.bat  build.js  builder.js  cmd.js  context.js  multibuilder.js  ninja-msvc.bat  paths.js  postbuild.bat  utils.js  vs-msvc.bat
src/: CMakeLists.txt  DBKDrvr.c  DBKDrvr.h  DBKFunc.c  DBKFunc.h  DBKKernel.sln  DBKKernel.vcxproj  DBKKernel.vcxproj.filters  IOPLDispatcher.c  IOPLDispatcher.h  SOURCES  ce.bat  ces.bat  compileinfo.txt  constants.h  debugger.c  debugger.h  deepkernel.c  deepkernel.h  interruptHook.c  interruptHook.h  memscan.c  memscan.h  noexceptions.c  noexceptions.h  obsolete_ntifs.h  processlist.c  processlist.h  segmentinfo.asm  sigcheck.c  sigcheck.h  sources.cesigned  tdiwrapper.c  threads.c  threads.h  ultimap.c  ultimap.h  ultimap2.c  ultimap2.h  vmxhelper.c  (+3 more)
src/amd64/: dbkfunca.asm  debuggera.asm  noexceptionsa.asm  ultimapa.asm  vmxhelpera.asm  vmxoffloada.asm
src/i386/: noexceptionsa.asm
src/ultimap2/: IOPLDispatcher.c  IOPLDispatcher.h  UltimapDrvr.c  UltimapDrvr.h  apic.c  apic.h  ultimap2-64.ddf  ultimap2-64.inf  ultimap2.sln  ultimap2.vcxproj  ultimap2.vcxproj.filters
src/x64/Debug/: DBK64.inf
src/x64/Debug/DBKKernel.tlog/: CL.command.1.tlog  CL.write.1.tlog  DBKKernel.lastbuildstate  Masm.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  signtool.command.1.tlog  signtool.timestamp.1.tlog  signtool.write.1.tlog  stampinf.command.1.tlog  stampinf.write.1.tlog
src/x64/Release/: DBK64.inf  DBK64.sys.recipe
src/x64/Release/DBKKernel.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DBKKernel.lastbuildstate  Inf2Cat.command.1.tlog  Masm.read.1u.tlog  Masm.write.1u.tlog  inf2cat-expand.12556.read.1.tlog  inf2cat-expand.12556.write.1.tlog  inf2cat-expand.13156.read.1.tlog  inf2cat-expand.13156.write.1.tlog  inf2cat-expand.read.1.tlog  inf2cat-expand.write.1.tlog  inf2cat.read.1.tlog  inf2cat.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  signtool.command.1.tlog  signtool.read.1.tlog  signtool.timestamp.1.tlog  signtool.write.1.tlog  stampinf.command.1.tlog  stampinf.read.1.tlog
src/x64/Releasewithoutsig/: DBK64.inf
src/x64/Releasewithoutsig/DBKKernel.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DBKKernel.lastbuildstate  Masm.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  signtool.read.1.tlog  signtool.timestamp.1.tlog  stampinf.command.1.tlog  stampinf.read.1.tlog
templates/: CMakeLists.txt.tpl  chamd.inf  chamd.inf.tpl  driver64.dat.tpl  makecat.cdf.tpl
